auto-test/tests/chapter_18/invalid_types/extra_credit/other_features/compound_assign_to_nested_struct.c



struct inner {
    int i;
};

struct outer {
    struct inner s;
};

int main(void) {
    struct outer x = {{1}};
    x.s *= 10;
    return 0;
}